--- a/index.htm
+++ b/index.htm
@@ -11,10 +11,13 @@
 <h2>Projects</h2>
 <hr />
 <h2>Practice Assignments</h2>
-<a href="/Spring2016/practice/HTML1/practice1.htm">Practice 1</a>
+<a href="C:\Users\daure\Desktop\Spring2025\INFO2420\INFO2420\Practices\Practice1.html">Practice 1</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="C:\Users\daure\Desktop\Spring2025\INFO2420\INFO2420\Practices\Practice 1A.html">Practice 1A</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="C:\Users\daure\Desktop\Spring2025\INFO2420\INFO2420\Practices\Practice1B.html">Practice 1B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="/Fall2015/practice/ExpWeb1/circle.html">Practice 2</a>
-
 <hr />
 <h2>Book Assignments</h2>
 
