--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,8 @@
 <h2>Projects</h2>
 <hr />
 <h2>Practice Assignments</h2>
-<a href="C:/Users/daure/Desktop/Spring2025/INFO2420/INFO2420/Practices/Practice1.html">Practice 1</a>
+<a href="<a href="NFO2420/blob/main/Practices/Practice1.html" target="_blank">Practice 1</a> 
+
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="C:/Users/daure/Desktop/Spring2025/INFO2420/INFO2420/Practices/Practice 1A.html">Practice 1A</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
