--- a/index.htm
+++ b/index.htm
@@ -9,16 +9,19 @@
 <h1>Home Page for Grace Mouele</h1>
 <hr />
 <h2>Projects</h2>
+<a href="Projects/Project1/Project1.html" target="blank">Project 1</a>
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1.html" target="_blank">Practice 1</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 
+<a href="Practices/Practice 1A.html">Practice 1A</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="C:/Users/daure/Desktop/Spring2025/INFO2420/INFO2420/Practices/Practice 1A.html">Practice 1A</a>
+
+<a href="Practices/Practice1B.html">Practice 1B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="C:/Users/daure/Desktop/Spring2025/INFO2420/INFO2420/Practices/Practice1B.html">Practice 1B</a>
-&nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="/Fall2015/practice/ExpWeb1/circle.html">Practice 2</a>
+
+<a href="Practices/cactus.html">Practice 2</a>
 <hr />
 <h2>Book Assignments</h2>
 
