--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,9 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
 <a href="Practices/cactus.html">Practice 2</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Practices/HTML3Files/index.html">Practice 3</a>
 <hr />
 <h2>Book Assignments</h2>
 
