--- a/index.htm
+++ b/index.htm
@@ -25,6 +25,8 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
 <a href="Practices/HTML3Files/index.html">Practice 3</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
 <hr />
 <h2>Book Assignments</h2>
 
