--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
 <a href="Practices/cactus.html">Practice 2</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
-<a href="Practices/HTML3Files/index.html">Practice 3</a>
+<a href="Practices/Practice3.html">Practice 3</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
 <hr />
