--- a/index.htm
+++ b/index.htm
@@ -27,6 +27,9 @@
 <a href="Practices/Practice3.html">Practice 3</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
+<a href="Practices/Practice3B.html">Practice 3B</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
 <hr />
 <h2>Book Assignments</h2>
 
