--- a/Practices/Practice3.html
+++ b/Practices/Practice3.html
@@ -12,9 +12,9 @@
 </p>
 <h3 id="Things"> Things I Like to Do:</h3>
 <ul>
-   <li> <a href="Pages/Reading/Reading.html"> Reading </a></li>
-   <li> <a href="Pages/Movies.html">Going to the movies </a></li>
-   <li> <a href="Pages/Hiking.html">Hiking and camping </a></li>
+   <li> <a href="Practices/HTML3Files/Pages/Reading/Reading.html"> Reading </a></li>
+   <li> <a href="Practices/HTML3Files/Pages/Movies.html">Going to the movies </a></li>
+   <li> <a href="Practices/HTML3Files/Pages/Hiking.html">Hiking and camping </a></li>
 </ul>
 <p><a href="#Top"> Return to Top</a></p>
 <hr>
