--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,16 @@
 <hr />
 <h2>Projects</h2>
 <a href="Projects/Project1/Project1.html" target="blank">Project 1</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Projects/Project2/AboutUs.html" target="blank">Project 2 About US</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Projects/Project2/Tributes.html" target="blank">Project 2 Tributes</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
 <hr />
+
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1.html" target="_blank">Practice 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
