--- a/index.htm
+++ b/index.htm
@@ -39,6 +39,13 @@
 <a href="Practices/Practice3B.html">Practice 3B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp; 
 
+<a href="Practices/HTML4AFiles/index.html">Practice 4A</a>
+&nbsp;&nbsp;|&nbsp;&nbsp; 
+
+<a href="Practices/Practice3B.html">Practice 4B</a>
+&nbsp;&nbsp;|&nbsp;&nbsp; 
+
+
 <hr/>
 <h2>Book Assignments</h2>
 
