--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,7 @@
 <a href="Practices/HTML4AFiles/index.html">Practice 4A</a>
 &nbsp;&nbsp;|&nbsp;&nbsp; 
 
-<a href="Practices/Practice3B.html">Practice 4B</a>
+<a href="Fonts/HTML4BFiles/CSS3Fonts/CSS3Fonts.html">Practice 4B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp; 
 
 
