--- a/index.htm
+++ b/index.htm
@@ -3,12 +3,30 @@
 <head>
 <meta charset="UTF-8">
 <title>Grace Mouele's Home Page</title>
+
+<style type="text/css">
+
+@font-face{
+	font-family:'BillionStars';
+	src: url('fonts/BillionStars_PersonalUse.eot'); 
+	src: local('BillionStars'), url('fonts/BillionStars_PersonalUse.ttf') format('truetype') ;
+	
+}
+h1{
+	font-family:BillionStars,Geneva,serif;
+	font-size: 36px;
+}
+</style>
+
+
 </head>
 
 <body>
 <h1>Home Page for Grace Mouele</h1>
 <hr />
+
 <h2>Projects</h2>
+
 <a href="Projects/Project1/Project1.html" target="blank">Project 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
@@ -21,6 +39,7 @@
 <hr />
 
 <h2>Practice Assignments</h2>
+
 <a href="Practices/Practice1.html" target="_blank">Practice 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
