--- a/index.htm
+++ b/index.htm
@@ -64,6 +64,9 @@ h1{
 <a href="Fonts/HTML4BFiles/CSS3Fonts/CSS3Fonts.html">Practice 4B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp; 
 
+<a href="Practices/HTML 5/index.html">Practice 5
+&nbsp;&nbsp;|&nbsp;&nbsp; 
+
 
 <hr/>
 <h2>Book Assignments</h2>
