--- a/index.htm
+++ b/index.htm
@@ -67,6 +67,9 @@ h1{
 <a href="Practices/HTML 5/index.html">Practice 5
 &nbsp;&nbsp;|&nbsp;&nbsp; 
 
+<a href="Practices/Chap13/bistro.html">Practice 5B
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
 
 <hr/>
 <h2>Book Assignments</h2>
