--- a/index.htm
+++ b/index.htm
@@ -7,14 +7,21 @@
 <style type="text/css">
 
 @font-face{
-	font-family:'BillionStars';
-	src: url('fonts/BillionStars_PersonalUse.eot'); 
-	src: local('BillionStars'), url('fonts/BillionStars_PersonalUse.ttf') format('truetype') ;
+	font-family:'Darkhorse';
+	src: url('fonts/Darkh4.eot'); 
+	src: local('Darkhorse'), url('fonts/Darkh4.ttf') format('truetype') ;
 	
 }
+
+.page-title{
+    font-family: 'Darkhorse', Geneva, serif;
+    font-size: 48px;
+    text-align: center;
+}
+
 h1{
-	font-family:BillionStars,Geneva,serif;
-	font-size: 36px;
+    font-family: 'Darkhorse', Geneva, serif;
+    font-size: 36px;
 }
 </style>
 
@@ -22,7 +29,9 @@ h1{
 </head>
 
 <body>
-<h1>Home Page for Grace Mouele</h1>
+
+<h1 class="page-title">Home Page for Grace Mouele</h1>
+
 <hr />
 
 <h2>Projects</h2>
