--- a/index.htm
+++ b/index.htm
@@ -79,6 +79,14 @@ h1{
 <a href="Practices/Chap13/bistro.html">Practice 5B
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
+<a href="Practices/Practice6A.html">Practice 6A
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Practices/Chap13/bistro.html">Practice 6B
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Practices/Chap13/bistro.html">Practice 5B
+&nbsp;&nbsp;|&nbsp;&nbsp;
 
 <hr/>
 <h2>Book Assignments</h2>
