--- a/index.htm
+++ b/index.htm
@@ -6,21 +6,20 @@
 
 <style type="text/css">
 
-@font-face{
-	font-family:'Darkhorse';
-	src: url('fonts/Darkh4.eot'); 
-	src: local('Darkhorse'), url('fonts/Darkh4.ttf') format('truetype') ;
-	
-}
+@font-face {
+  font-family:"GreatVibes-Regular";
+  src: url("Fonts/GreatVibes-Regular.eot");
+  src: local("GreatVibes-Regular"), url("Fonts/GreatVibes-Regular.ttf") format('truetype')
+			}
 
 .page-title{
-    font-family: 'Darkhorse', Geneva, serif;
+    font-family: 'GreatVibes-Regular', Geneva, serif;
     font-size: 48px;
     text-align: center;
-}
+			}
 
 h1{
-    font-family: 'Darkhorse', Geneva, serif;
+    font-family: 'GreatVibes-Regular', Geneva, serif;
     font-size: 36px;
 }
 </style>
