--- a/index.htm
+++ b/index.htm
@@ -81,7 +81,7 @@ h1{
 <a href="Practices/Practice6A.html">Practice 6A
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
-<a href="Practices/Chap13/bistro.html">Practice 6B
+<a href="Practices/Practice6B.html">Practice 6B
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
 <a href="Practices/Chap13/bistro.html">Practice 5B
