--- a/index.htm
+++ b/index.htm
@@ -70,18 +70,18 @@ h1{
 &nbsp;&nbsp;|&nbsp;&nbsp; 
 
 <a href="Fonts/HTML4BFiles/CSS3Fonts/CSS3Fonts.html">Practice 4B</a>
-&nbsp;&nbsp;|&nbsp;&nbsp; 
-
-<a href="Practices/HTML 5/index.html">Practice 5
-&nbsp;&nbsp;|&nbsp;&nbsp; 
-
-<a href="Practices/Chap13/bistro.html">Practice 5B
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
-<a href="Practices/Practice6A.html">Practice 6A
+<a href="Practices/HTML 5/index.html">Practice 5</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
-<a href="Practices/Practice6B.html">Practice 6B
+<a href="Practices/Chap13/bistro.html">Practice 5B</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Practices/Practice6A.html">Practice 6A</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Practices/Practice6B.html">Practice 6B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
 <hr/>
