--- a/Fonts/HTML4BFiles/CSS3fonts/CSS3fonts/CSS3Fonts.html
+++ b/Fonts/HTML4BFiles/CSS3fonts/CSS3fonts/CSS3Fonts.html
@@ -7,15 +7,15 @@
 <style type="text/css">
 
 @font-face{
-	font-family: 'bendable';
-    src: url("bendable.eot");
-    src: local('bendable'), url("bendable.ttf") format('truetype');
+	font-family: 'BillionStars_PersonalUse';
+    src: url("BillionStars_PersonalUse.eot");
+    src: local('BillionStars_PersonalUse'), url("BillionStars_PersonalUse.ttf") format('truetype');
 	
 }
 
 
 p{
-	font-family:bendable,Geneva,serif;
+	font-family:BillionStars_PersonalUse,Geneva,serif;
 	font-size: 36px;
 }
 
