--- a/index.htm
+++ b/index.htm
@@ -38,12 +38,17 @@ h1{
 <a href="Projects/Project1/Project1.html" target="blank">Project 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
-<a href="Projects/Project2/AboutUs.html" target="blank">Project 2 About US</a>
+<a href="Projects/Project2/AboutUs.html" target="blank">Project 2: About US</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
-<a href="Projects/Project2/Tributes.html" target="blank">Project 2 Tributes</a>
+<a href="Projects/Project2/Tributes.html" target="blank">Project 2: Tributes</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
+<a href="Projects/Project3/AboutUs.html" target="blank">Project 3: About Us</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Projects/Project2/Tributes.html" target="blank">Project 3: Tributes</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 
 <h2>Practice Assignments</h2>
