--- a/Projects/Project3/Tributes.html
+++ b/Projects/Project3/Tributes.html
@@ -6,14 +6,14 @@
 
 <style>
     body {
-      background-color: #DAF7A6; 
-      color: #333333; 
+      background-color: #eb9e96; 
+      color: #413837; 
       font-family: 'Arial', sans-serif;
       font-size: 100%;
     }
     
     h1, h2, h3 {
-      color: #b9770e; /* Blue for headings */
+      color: #546b5f;
     }
     
     p {
