--- a/Projects/Project3/AboutUs.html
+++ b/Projects/Project3/AboutUs.html
@@ -6,15 +6,15 @@
 
 <style>
     body {
-        background-color: #F4E1D2;
-        color: #333;
+        background-color: #42eb92;
+        color: #413837;
         font-family: Arial, sans-serif;
         font-size: 100%;
         margin: 20px;
         line-height: 1.6;
     }
     h1, h2 {
-        color: #8B4513;
+        color: #96625c;
     }
     ul {
         list-style-type: none;
@@ -25,11 +25,11 @@
         margin-right: 15px;
     }
     a:link, a:visited {
-        color: #A52A2A;
+        color: #eb9e96;
         text-decoration: none;
     }
     a:hover {
-        color: #FF6347;
+        color: #5bab81;
         text-decoration: underline;
     }
     img {
@@ -47,7 +47,7 @@
     }
     blockquote {
         font-style: italic;
-        border-left: 5px solid #A52A2A;
+        border-left: 5px solid #eb9e96;
         padding-left: 10px;
         margin-left: 20px;
     }
