--- a/Projects/Project3/AboutUs.html
+++ b/Projects/Project3/AboutUs.html
@@ -25,7 +25,7 @@
         margin-right: 15px;
     }
     a:link, a:visited {
-        color: #eb9e96;
+        color: #413837;
         text-decoration: none;
     }
     a:hover {
