--- a/Projects/Project4/AboutUs.html
+++ b/Projects/Project4/AboutUs.html
@@ -6,15 +6,15 @@
 
 <style>
     body {
-        background-color: #f5e389;
-        color: #577575;
+        background-color: #42eb92;
+        color: #413837;
         font-family: Arial, sans-serif;
         font-size: 100%;
         margin: 20px;
         line-height: 1.6;
     }
     h1, h2 {
-        color: #f589da;
+        color: #96625c;
     }
     ul {
         list-style-type: none;
@@ -25,11 +25,11 @@
         margin-right: 15px;
     }
     a:link, a:visited {
-        color: #757057;
+        color: #413837;
         text-decoration: none;
     }
     a:hover {
-        color: #a08f9c;
+        color: #5bab81;
         text-decoration: underline;
     }
     img {
