--- a/Projects/Project4/AboutUs.html
+++ b/Projects/Project4/AboutUs.html
@@ -6,33 +6,32 @@
 
 <style>
     body {
-        background-color: #42eb92;
-        color: #413837;
+        background-color: #f5e389;
+        color: #577575;
         font-family: Arial, sans-serif;
         font-size: 100%;
         margin: 20px;
         line-height: 1.6;
     }
     h1, h2 {
-        color: #96625c;
+        color: #f589da;
     }
-    ul {
+	ul {
         list-style-type: none;
-        padding: 0;
-    }
-    ul li {
+        padding: 0;}
+	  ul li {
         display: inline;
         margin-right: 15px;
-    }
+			}
     a:link, a:visited {
-        color: #413837;
+        color: #757057;
         text-decoration: none;
-    }
+					}
     a:hover {
-        color: #5bab81;
+        color: #a08f9c;
         text-decoration: underline;
-    }
-    img {
+    }	
+	img {
         max-width: 100%;
         height: auto;
         padding: 10px;
@@ -45,13 +44,42 @@
         float: right;
         margin-left: 15px;
     }
-    blockquote {
-        font-style: italic;
-        border-left: 5px solid #eb9e96;
-        padding-left: 10px;
+       table {
+        width: 50%;
+        border-collapse: collapse;
+        font-size: 16px;
+        float: right;
         margin-left: 20px;
-    }
-</style>
+			}
+	caption {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #757057; 
+    background-color: #89f5f4; 
+    border-radius: 8px;
+    padding: 10px;
+    text-align: center;
+		}
+
+	th {
+    background-color: #f589da; 
+    color: #577575; 
+    padding: 12px;
+    text-align: left;
+		}
+
+	td {
+    background-color: #f5e389; 
+    border: 1px solid #577575; 
+    padding: 10px;
+    color: #577575; 
+	}
+
+tr:nth-child(even) {
+    background-color: #a08f9c; 
+	}
+	</style>
 </head>
 
 <body>
@@ -110,6 +138,33 @@ The web site for Native Cooking of Utah organizes the recipes by area of the sta
 <h2 id="lookingToTheFuture">Looking to the Future...</h2>
 
 <p>Native Cooking of Utah has become one of the most popular cooking sites in the Western U.S. with over 10,000 hits per week.  Chef Pierre DeBois has plans to expand the site to include cooking utensils and kitchen accessories used or hand-made by native Utahans.  Not only can you use this web site to help you to create true Utahan cuisine, now you can look the part.  You will find these added treats online after January, 2013.</p>
+<table>
+    <caption>Traditional Native Cooking Tools</caption>
+    <tr>
+        <th>Item</th>
+        <th>Description</th>
+    </tr>
+    <tr>
+        <td>Cooking Pots</td>
+        <td>Most often rounded with open mouths and somewhat sharply rounded bottoms.</td>
+    </tr>
+    <tr>
+        <td>Antique Bowls</td>
+        <td>Wonderfully carved, thin, and lightweight despite its large dimensions - 13” X 18”.</td>
+    </tr>
+    <tr>
+        <td>Gourds</td>
+        <td>Made functional light-weight bowls, dippers, and spoons.</td>
+    </tr>
+    <tr>
+        <td>Soapstone Bowl</td>
+        <td>Not as finely made, but fairly representative of many found in archaeological digs.</td>
+    </tr>
+    <tr>
+        <td>Deer Jaw Bone</td>
+        <td>Works very well at scraping juicy corn kernels from the cob.</td>
+    </tr>
+</table>
 
 <p><a href="#Top"> Return to Top</a></p>
 
