--- a/index.htm
+++ b/index.htm
@@ -49,6 +49,9 @@ h1{
 
 <a href="Projects/Project3/Tributes.html" target="blank">Project 3: Tributes</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Projects/Project4/AboutUs.html" target="blank">Project 4</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 
 <h2>Practice Assignments</h2>
