--- a/Projects/Project4/AboutUs.html
+++ b/Projects/Project4/AboutUs.html
@@ -44,12 +44,17 @@
         float: right;
         margin-left: 15px;
     }
-       table {
-        width: 50%;
-        border-collapse: collapse;
+     table {
+        width: 60%;
+        border-collapse: separate;
+		border-spacing: 0 10px;
         font-size: 16px;
         float: right;
+		background-color: #757057;
         margin-left: 20px;
+		border-radius: 8px;
+        overflow: hidden;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 			}
 	caption {
     font-size: 20px;
@@ -67,6 +72,8 @@
     color: #577575; 
     padding: 12px;
     text-align: left;
+	border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 		}
 
 	td {
