--- a/Projects/Project4/AboutUs.html
+++ b/Projects/Project4/AboutUs.html
@@ -71,7 +71,7 @@
     background-color: #f589da; 
     color: #577575; 
     padding: 12px;
-    text-align: left;
+    text-align: center;
 	border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 		}
