--- a/Projects/Project4/Tributes.html
+++ b/Projects/Project4/Tributes.html
@@ -5,16 +5,16 @@
 <title>Tributes: Native Cooking</title>
 
 <style>
-    body {
-        background-color: #eb9e96;
-        color: #413837;
+   body {
+        background-color: #A0B49F;
+        color: #F5F5F5;
         font-family: Arial, sans-serif;
         font-size: 100%;
         margin: 20px;
         line-height: 1.6;
     }
     h1, h2 {
-        color: #546b5f;
+        color: #D17F5D;
     }
     table {
         width: 100%;
@@ -25,26 +25,26 @@
         font-size: 20px;
         font-weight: bold;
         margin-bottom: 10px;
-        color: #4B2C20;
-        background-color: #F4E1C6;
+        color: #060A1F;
+        background-color: #F5F5F5;
         border-radius: 8px;
         padding: 10px;
         text-align: center;
     }
     th {
-        background-color: #8B5A2B;
+        background-color: #060a1f;
         color: white;
         padding: 12px;
         text-align: left;
     }
     td {
-        background-color: #FDF5E6;
-        border: 1px solid #D2B48C;
+        background-color: #65373c;
+        border: 1px solid #F5F5F5;
         padding: 10px;
-        color: #4B2C20;
+        color: #F5F5F5;
     }
     tr:nth-child(even) {
-        background-color: #E3C29D;
+        background-color: #a08f9c;
     }
 </style>
 
