--- a/Projects/Project4/AboutUs.html
+++ b/Projects/Project4/AboutUs.html
@@ -6,15 +6,15 @@
 
 <style>
     body {
-        background-color: #f5e389;
-        color: #577575;
+        background-color: #A0B49F;
+        color: #F5F5F5;
         font-family: Arial, sans-serif;
         font-size: 100%;
         margin: 20px;
         line-height: 1.6;
     }
     h1, h2 {
-        color: #f589da;
+        color: #D17F5D;
     }
 	ul {
         list-style-type: none;
@@ -24,7 +24,7 @@
         margin-right: 15px;
 			}
     a:link, a:visited {
-        color: #757057;
+        color: #060A1F;
         text-decoration: none;
 					}
     a:hover {
@@ -50,7 +50,7 @@
 		border-spacing: 0 10px;
         font-size: 16px;
         float: right;
-		background-color: #757057;
+		background-color: #060A1F;
         margin-left: 20px;
 		border-radius: 8px;
         overflow: hidden;
@@ -60,16 +60,16 @@
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
-    color: #757057; 
-    background-color: #89f5f4; 
+    color: #060A1F; 
+    background-color: #F5F5F5; 
     border-radius: 8px;
     padding: 10px;
     text-align: center;
 		}
 
 	th {
-    background-color: #f589da; 
-    color: #577575; 
+    background-color: #060a1f; 
+    color: #F5F5F5; 
     padding: 12px;
     text-align: center;
 	border-top-left-radius: 8px;
@@ -77,10 +77,10 @@
 		}
 
 	td {
-    background-color: #f5e389; 
-    border: 1px solid #577575; 
+    background-color: #65373c; 
+    border: 1px solid #F5F5F5; 
     padding: 10px;
-    color: #577575; 
+    color: #F5F5F5; 
 	}
 
 tr:nth-child(even) {
