--- a/Projects/Project4/AboutUs.html
+++ b/Projects/Project4/AboutUs.html
@@ -5,13 +5,9 @@
 <title>About Us: Native Cooking</title>
 
 <style>
-<HEAD>
-    body {
+   body {
         background-color: #A0B49F;
-        color: #F5F5F
-    body { 
-        background-color: #f5e389;
-        color: #577575;
+        color: #F5F5F5;
         font-family: Arial, sans-serif;
         font-size: 100%;
         margin: 20px;
@@ -32,7 +28,7 @@
         text-decoration: none;
 					}
     a:hover {
-        color: #a08f9c;
+        color: #f1c232;
         text-decoration: underline;
     }	
 	img {
@@ -54,22 +50,22 @@
 		border-spacing: 0 10px;
         font-size: 16px;
         float: right;
-		background-color: #060A1F;
+		background-color: #757057;
         margin-left: 20px;
 		border-radius: 8px;
         overflow: hidden;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 			}
 	caption {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    color: #060A1F; 
-    background-color: #F5F5F5; 
-    border-radius: 8px;
-    padding: 10px;
-    text-align: center;
-		}
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 10px;
+        color: #060A1F;
+        background-color: #d17f5d;
+        border-radius: 8px;
+        padding: 10px;
+        text-align: center;
+    }
 
 	th {
     background-color: #060a1f; 
