--- a/Projects/Project5/Graphics.html
+++ b/Projects/Project5/Graphics.html
@@ -6,9 +6,13 @@
 </head>
 
 <body>
-
+<h1>Logo</h1>
 <p>
-The content of the document goes here . . .
+<img src= "Images/Logo.png" alt="Logo">
+</p>
+<h1> Banner</h1>
+<p>
+<img src= "Images/Banner.png" alt= "Banner">
 </p>
 
 </body>
