--- a/index.htm
+++ b/index.htm
@@ -52,6 +52,9 @@ h1{
 
 <a href="Projects/Project4/AboutUs.html" target="blank">Project 4</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Projects/Project5/Graphics.html">Project 5: Graphics</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 
 <h2>Practice Assignments</h2>
