--- a/Projects/Project5/index.html
+++ b/Projects/Project5/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Image Map</title>
 </head>
 
 <body>
-
+<h1> Image Map</h1>
 <p>
-The content of the document goes here . . .
+<img src="Images/mymap.png" alt="mymap">
 </p>
 
 </body>
