--- a/index.htm
+++ b/index.htm
@@ -55,6 +55,9 @@ h1{
 
 <a href="Projects/Project5/Graphics.html">Project 5: Graphics</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Projects/Project5/index.html">Project 5: Imagemap</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 
 <h2>Practice Assignments</h2>
