--- a/index.htm
+++ b/index.htm
@@ -98,6 +98,11 @@ h1{
 <a href="Practices/Practice6B.html">Practice 6B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
+<a href="Practices/bakery_ch16.html">Practice 7: Bakery</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Practices/flex-menu.html">Practice 7: Flex-menu</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr/>
 <h2>Book Assignments</h2>
 
