--- a/index.htm
+++ b/index.htm
@@ -98,10 +98,10 @@ h1{
 <a href="Practices/Practice6B.html">Practice 6B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
-<a href="Practices/bakery_ch16.html">Practice 7: Bakery</a>
+<a href="Practices/Excercise16-1/bakery_ch16.html">Practice 7: Bakery</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
-<a href="Practices/flex-menu.html">Practice 7: Flex-menu</a>
+<a href="Practices/Exercise16-2 & 3/flex-menu.html">Practice 7: Flex-menu</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <hr/>
 <h2>Book Assignments</h2>
