--- a/Projects/Project5/Graphics.html
+++ b/Projects/Project5/Graphics.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Logo</h1>
 <p>
-<img src= "Images/Logo.png" alt="Logo">
+<img src= "Images/Logo1.png" alt="Logo">
 </p>
 <h1> Banner</h1>
 <p>
