--- a/index.htm
+++ b/index.htm
@@ -103,6 +103,9 @@ h1{
 
 <a href="Practices/Exercise16-2 & 3/flex-menu.html">Practice 7: Flex-menu</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Practices/JavaScript/ImageSwap.htm">JavaScript</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr/>
 <h2>Book Assignments</h2>
 
