--- a/index.htm
+++ b/index.htm
@@ -106,6 +106,9 @@ h1{
 
 <a href="Practices/JavaScript/ImageSwap.htm">JavaScript</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Practices/work-with-html-text/rendered-index-start.html">DWPractice 1</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr/>
 <h2>Book Assignments</h2>
 
