--- a/index.htm
+++ b/index.htm
@@ -58,6 +58,9 @@ h1{
 
 <a href="Projects/Project5/index.html">Project 5: Imagemap</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Projects/Project6/graphics-1.htm">Project 6: Graphics</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 
 <h2>Practice Assignments</h2>
