--- a/Projects/Project6/graphics-1.htm
+++ b/Projects/Project6/graphics-1.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Rent a Pet - Graphics</title>
+<title>Native Cooking of Utah - Graphics</title>
 
 <style type="text/css">
 
@@ -38,13 +38,13 @@
 
 	PrintButton1 = new Image
 	PrintButton2 = new Image
-	logo1 = new Image
-	logo2 = new Image
+	Logo1 = new Image
+	Logo2 = new Image
 if (document.images) {
 	PrintButton1.src = "images/Print1.jpg"
 	PrintButton2.src = "images/Print2.jpg"
-	logo1.src = "images/logo1.jpg"
-	logo2.src = "images/logo2.jpg"
+	Logo1.src = "images/Logo1.jpg"
+	Logo2.src = "images/Logo2.jpg"
 }
 
 
@@ -104,7 +104,7 @@ if (document.images) {
 	<a href="" onMouseOver="document.PrintButton.src=PrintButton2.src;"
 	onMouseOut="document.PrintButton.src=PrintButton1.src;">
 
-	<img src="images/print1.jpg" width="250" height="50" 
+	<img src="Images/Print1.jpg" width="250" height="50" 
 	name="PrintButton" alt="PrintButton" style="border:none;"/>
 
 	</a>
@@ -115,7 +115,7 @@ if (document.images) {
 	<a href="logo.html" onMouseOver="document.logo.src=logo2.src;"
 	onMouseOut="document.logo.src=logo1.src;">
 
-	<img src="images/logo1.jpg" width="133" height="126" 
+	<img src="Images/Logo1.jpg" width="133" height="126" 
 	name="logo" alt="logo" style="border:none;"/>
 
 	</a>
@@ -128,20 +128,21 @@ if (document.images) {
 
 
 <div id="thumbs">
-		<img src="Images/Thumbnails/Image1Sm.jpg" alt="Dog doing Trick" onmouseover="swapImage(0);" />
-		<img src="Images/Thumbnails/Image2Sm.jpg" alt="Two hunting Dogs" onmouseover="swapImage(1);" />
-		<img src="Images/Thumbnails/Image3Sm.jpg" alt="Dog and two kids" onmouseover="swapImage(2);" />
-		<img src="Images/Thumbnails/Image4Sm.jpg" alt="Woman and Dog" onmouseover="swapImage(3);" />
+		<img src="Images/Thumbnails/Image1Sm.jpg" alt="Nice plate" onmouseover="swapImage(0);" />
+		<img src="Images/Thumbnails/Image2Sm.jpg" alt="Great Wine" onmouseover="swapImage(1);" />
+		<img src="Images/Thumbnails/Image3Sm.jpg" alt="Delicious Desert" onmouseover="swapImage(2);" />
+		<img src="Images/Thumbnails/Image4Sm.jpg" alt="Marble Steak" onmouseover="swapImage(3);" />
 		
 </div>
 
 	<div id="image">
 
 		<img id="theImage" src="Images/FullSize/Image1Lg.jpg" alt="Nice Plate " />
+		
 		<h3 id="bottomText">Food In Utah</h3>
 	</div>
 
-<img src="images/2colback.jpg">
+<img src="Images/2colback.jpg">
 
 <br />
 <br />
