--- a/Projects/Project6/graphics-1.htm
+++ b/Projects/Project6/graphics-1.htm
@@ -41,10 +41,10 @@
 	Logo1 = new Image
 	Logo2 = new Image
 if (document.images) {
-	PrintButton1.src = "images/Print1.jpg"
-	PrintButton2.src = "images/Print2.jpg"
-	Logo1.src = "images/Logo1.jpg"
-	Logo2.src = "images/Logo2.jpg"
+	PrintButton1.src = "Images/Print1.jpg"
+	PrintButton2.src = "Images/Print2.jpg"
+	Logo1.src = "Images/Logo1.jpg"
+	Logo2.src = "Images/Logo2.jpg"
 }
 
 
@@ -111,12 +111,12 @@ if (document.images) {
 </div>
 
 
-<div id="logo">
-	<a href="logo.html" onMouseOver="document.logo.src=logo2.src;"
-	onMouseOut="document.logo.src=logo1.src;">
+<div id="Logo">
+	<a href="Logo.html" onMouseOver="document.Logo.src=Logo2.src;"
+	onMouseOut="document.Logo.src=Logo1.src;">
 
 	<img src="Images/Logo1.jpg" width="133" height="126" 
-	name="logo" alt="logo" style="border:none;"/>
+	name="Logo" alt="Logo" style="border:none;"/>
 
 	</a>
 </div>
