--- a/Projects/Project6/graphics-1.htm
+++ b/Projects/Project6/graphics-1.htm
@@ -135,10 +135,10 @@ if (document.images) {
 		
 </div>
 
-	<div id="image">
+	<div id="Image">
 
 		<img id="theImage" src="Images/FullSize/Image1Lg.jpg" alt="Nice Plate " />
-		
+	
 		<h3 id="bottomText">Food In Utah</h3>
 	</div>
 
