--- a/Projects/Project6/graphics-1.htm
+++ b/Projects/Project6/graphics-1.htm
@@ -8,9 +8,12 @@
 
 
 	#thumbs, #image {
-	width: 700px; border: solid 1px #000;
-	text-align: center; margin: 0 auto 0
-	auto; color: #000; background: #eee;
+	width: 700px;
+	border: solid 1px #000;
+	text-align: center;
+	margin: 0 auto 0; 
+	color: #000;
+	background: #eee;
 	padding: 5px;
 	}
 
