--- a/Projects/Project6/graphics-1.htm
+++ b/Projects/Project6/graphics-1.htm
@@ -69,7 +69,7 @@ if (document.images) {
 			
 		);
 			
-		var imgPath = "Images/Fullsize/";
+		var imgPath = "/Images/FullSize";
 		
 		function swapImage(imgID) {
 
