--- a/index.htm
+++ b/index.htm
@@ -112,6 +112,11 @@ h1{
 
 <a href="Practices/work-with-html-text/rendered-index-start.html">DWPractice 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Practices/Practice7/Project7Practice/Index.htm">Project7 CSS Practice</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
+
 <hr/>
 <h2>Book Assignments</h2>
 
