--- a/index.htm
+++ b/index.htm
@@ -116,6 +116,8 @@ h1{
 <a href="Practices/Practice7/Project7Practice/Index.htm">Project7 CSS Practice</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
+<a href="Practices/ImageMap/ImageExamples.html">ImageMap</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 
 <hr/>
 <h2>Book Assignments</h2>
