--- a/Projects/Project3/Tributes.html
+++ b/Projects/Project3/Tributes.html
@@ -5,16 +5,16 @@
 <title>Tributes: Native Cooking</title>
 
 <style>
-     body {
-        background-color: #A0B49F;
-        color: #F5F5F5;
+    body {
+        background-color: #efc261;
+        color: #000000;
         font-family: Arial, sans-serif;
         font-size: 100%;
         margin: 20px;
         line-height: 1.6;
     }
     h1, h2 {
-        color: #D17F5D;
+        color: #f0606f;
     }
     ul {
         list-style-type: none;
@@ -25,11 +25,11 @@
         margin-right: 15px;
     }
     a:link, a:visited {
-        color: #060A1F;
+        color: #f07454;
         text-decoration: none;
     }
     a:hover {
-        color: #F1C232;
+        color: #f05b1a;
         text-decoration: underline;
     }
     img {
