--- a/Projects/Project4/AboutUs.html
+++ b/Projects/Project4/AboutUs.html
@@ -6,15 +6,15 @@
 
 <style>
    body {
-        background-color: #A0B49F;
-        color: #F5F5F5;
+        background-color: #efc261;
+        color: #000000;
         font-family: Arial, sans-serif;
         font-size: 100%;
         margin: 20px;
         line-height: 1.6;
     }
     h1, h2 {
-        color: #D17F5D;
+        color: #f0606f;
     }
 	ul {
         list-style-type: none;
@@ -24,11 +24,11 @@
         margin-right: 15px;
 			}
     a:link, a:visited {
-        color: #060A1F;
+        color: #f07454;
         text-decoration: none;
 					}
     a:hover {
-        color: #f1c232;
+        color: #f05b1a;
         text-decoration: underline;
     }	
 	img {
@@ -50,7 +50,7 @@
 		border-spacing: 0 10px;
         font-size: 16px;
         float: right;
-		background-color: #757057;
+		background-color: #f05b1a;
         margin-left: 20px;
 		border-radius: 8px;
         overflow: hidden;
@@ -60,16 +60,16 @@
         font-size: 20px;
         font-weight: bold;
         margin-bottom: 10px;
-        color: #060A1F;
-        background-color: #d17f5d;
+        color: #000000;
+        background-color: #b1d7e5;
         border-radius: 8px;
         padding: 10px;
         text-align: center;
     }
 
 	th {
-    background-color: #060a1f; 
-    color: #F5F5F5; 
+    background-color: #f0606f; 
+    color: #000000; 
     padding: 12px;
     text-align: center;
 	border-top-left-radius: 8px;
@@ -77,14 +77,14 @@
 		}
 
 	td {
-    background-color: #65373c; 
-    border: 1px solid #F5F5F5; 
+    background-color: #b1d7e5; 
+    border: 1px solid #000000; 
     padding: 10px;
-    color: #F5F5F5; 
+    color: #000000; 
 	}
 
 tr:nth-child(even) {
-    background-color: #a08f9c; 
+    background-color: #000000; 
 	}
 	</style>
 </head>
