--- a/index.htm
+++ b/index.htm
@@ -119,6 +119,9 @@ h1{
 <a href="Practices/ImageMap/ImageExamples.html">ImageMap</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
+<a href="Practices/Create a Dynamic Web Template/index.html">CountryCreations</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+
 <hr/>
 <h2>Book Assignments</h2>
 
