--- a/index.htm
+++ b/index.htm
@@ -119,7 +119,7 @@ h1{
 <a href="Practices/ImageMap/ImageExamples.html">ImageMap</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
-<a href="Practices/Create a Dynamic Web Template/index.html">CountryCreations</a>
+<a href="Practices/CountryCreations/index.html">CountryCreations</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 
 <hr/>
