--- a/index.htm
+++ b/index.htm
@@ -61,6 +61,9 @@ h1{
 
 <a href="Projects/Project6/graphics-1.htm">Project 6: Graphics</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Projects/Project7/Home.html">Project 7</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <hr />
 
 <h2>Practice Assignments</h2>
