--- a/Projects/Project3/Tributes.html
+++ b/Projects/Project3/Tributes.html
@@ -56,7 +56,7 @@
 </head>
 
 <body>
-<h1>Tributes Native Cooking</h1>
+<h1 id="Top">Tributes Native Cooking</h1>
 
 <p>Read the heartfelt tributes and comments from those who appreciate the rich tradition of Native Utah cuisine.</p>
 
@@ -100,6 +100,7 @@ Warmly yours."</p>
 Daniel Johnson
 St. George, Utah
 
+<p><a href="#Top"> Return to Top</a></p>
 
 
 </body>
