--- a/index.htm
+++ b/index.htm
@@ -64,6 +64,8 @@ h1{
 
 <a href="Projects/Project7/Home.html">Project 7</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+
+<a href="Projects/Project8/home.htm">Project 8</a>
 <hr />
 
 <h2>Practice Assignments</h2>
